--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title><%= title %></title>
+  <title>Product Store</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
   <%- include('partials/header') %>
 
-  <main class="container mt-5">
+  <main class="container mt-5 flex-grow-1 pb-5">
     <%- body %>
   </main>
 
