--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">MyApp</a>
+  <div class="container">
+    <a class="navbar-brand" href="/">
+      <img src="/images/logo.png" alt="Logo" height="32" class="d-inline-block align-text-top">
+      Product Store
+    </a>
+    
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/products">Products</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
